--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-todo-form (event)="addTodo($event)"></app-todo-form>
+<app-todo-form (event)="addTodos($event)"></app-todo-form>
 <app-todo-list [todos]="todosList"></app-todo-list>
